--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <hr/>
-        <img src="Images/ashu.jpg" alt="Ashvini Chavan's headshot" width="20%"/>
+        <img src="Images/Ashvini.png" alt="Ashvini Chavan's headshot" width="20%"/>
 
         <h1>Ashvini Chavan</h1>
         <h4>RHCSA Certified, RHCE Trained, Computer Science Engineer.</h4>
