--- a/resume.html
+++ b/resume.html
@@ -12,8 +12,11 @@
         <img src="Images/Ashvini.png" alt="Ashvini Chavan's headshot" width="20%"/>
 
         <h1>Ashvini Chavan</h1>
-        <h4>RHCSA Certified, RHCE Trained, Computer Science Engineer.</h4>
-
+        <h4>
+            AWS SAA Certified <br/>
+            RHCE Certified <br/>
+            RHCSA Trained <br/>
+        </h4>
         <p>
             Email : <a href="mailto:ashvinichavan1998@gmail.com" target="_blank">ashvinichavan1998@gmail.com</a>
         </p>
@@ -30,14 +33,14 @@
 
         <h2>Skills</h2>
         <ul>
-            <li>C</li>
-            <li>C++</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS Basics</li>
-            <li>Bootstrap Basics</li>
-            <li>RHCSA</li>
-            <li>RHCE</li>
+            <li>Linux</li>
+            <li>AWS Cloud</li>
+            <li>Git & Github</li>
+            <li>Chef</li>
+            <li>Ansible</li>
+            <li>Docker</li>
+            <li>Jenkins</li>
+            <li>Maven</li>
         </ul>
     </body>
 
